<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".choose">
    <RelativeLayout
        android:id="@+id/welcome_name"
        android:layout_above="@id/choose_subject"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:text="@string/hello"/>
        <TextView
            android:id="@+id/get_username"
            android:layout_toRightOf="@id/hello"
            android:layout_toEndOf="@id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/username"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/choose_subject"
        android:layout_above="@id/choose_option"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:text="@string/choose_your_subject"/>
    <LinearLayout
        android:id="@+id/choose_option"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="25sp"
                android:textColor="@drawable/text_change"
                android:background="@drawable/button_general"
                android:layout_marginBottom="10dp"
                android:onClick="php"
                android:text="@string/php"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                android:textColor="@drawable/text_change"
                android:layout_marginBottom="10dp"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:onClick="java"
                android:background="@drawable/button_general"
                android:text="@string/java"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:textColor="@drawable/text_change"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:onClick="javascript"
                android:background="@drawable/button_general"
                android:text="@string/javascript"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:textColor="@drawable/text_change"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:onClick="xml"
                android:background="@drawable/button_general"
                android:text="@string/xml"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                android:textAlignment="textStart"
                android:textColor="@drawable/text_change"
                android:layout_gravity="start"
                android:onClick="tech"
                android:background="@drawable/button_general"
                android:text="@string/tech_history"/>
    </LinearLayout>
</RelativeLayout>