<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:background="@drawable/login3">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/edu"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:inputType="textCapSentences"
                android:textAllCaps="true"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:onClick="login"
            android:text="@string/get_started"/>
    </LinearLayout>

</RelativeLayout>